assets/css/main.css
/* ... */
.headerMbBarNavLogo {
	/*display: none;*/
	transition: visibility 0s, opacity 0.5s linear;
	/*opacity: 0;*/
	justify-content: center;
	align-items: center;
	padding: 12px 0;
	/*visibility: hidden;*/
}

.headerMbBarNavLogo.__Hide {
	position: absolute;
	top: -100px;
	z-index: 0;
}

/* Изначально скрываем логотип */
@media screen and (max-width: 768px) {
	/*.headerMbBarNavLogo {*/
	/*    display: flex; !* сохраняем ваш flex-лейаут *!*/
	/*    opacity: 1; !* полностью прозрачный *!*/
	/*    transition: opacity 0.4s ease; !* длительность и плавность *!*/
	/*}*/
}

.headerMainNavLt,
.headerMainNavRt {
}

.headerMainNavItemIcon {
	display: flex;
}

@media screen and (max-width: 768px) {
	.headerMainNavLt,
	.headerMainNavRt {
		gap: 20px !important;
	}

	.headerMainNav {
		min-height: unset !important;
		z-index: 100;
	}

	/*.headerMbBarNavLogo {*/
	/*    display: flex;*/
	/*    justify-content: center;*/
	/*    align-items: center;*/
	/*    padding: 12px 0;*/
	/*}*/
}

.headerMainNavMenu {
}

.headerMainNavMenu ul {
	display: flex;
	align-items: center;
	gap: 16px;
}

.headerMainNavMenu ul li a {
	font-size: 16px;
	font-weight: 400;
	line-height: 125%;
	text-decoration: none;
}

.headerMainNavMenuMob {
	display: none;
}

.headerMainNavMenuMob .navMenuMobIcon {
	display: flex;
	align-items: center;
}

.mobileMenuContentMenu nav#quadmenu {
	box-shadow: none !important;
}

.mobileMenuContentMenu ul.quadmenu-navbar-nav li .quadmenu-item-content {
	padding: 20px 0px 20px 0px !important;
}

.mobileMenuContentMenu ul.quadmenu-navbar-nav li a .quadmenu-text {
	padding: 0 !important;
}

.mobileMenuContentMenu ul li .quadmenu-item-content .quadmenu-text {
	font-family: 'Sofia Sans', sans-serif;
	font-weight: 600;
	font-size: 18px;
	line-height: 125%;
	letter-spacing: 0%;
}

@media screen and (max-width: 560px) {
	.headerMainNav {
		/* position: fixed; */
		top: 0;
		top: 0;
		right: 0;
		left: 0;
		z-index: 100;
	}

	.headerMainNavMenu {
		display: none;
	}

	.headerMainNavMenuMob {
		display: flex !important;
	}
}

/*    */

.headerMainNavItem {
	display: flex;
	align-items: center;
}

.headerMainNavItem.headerMainNavItemMb {
	display: none !important;
}

.headerMainNavItem.headerMainNavItemXl {
	display: flex;
}

@media screen and (max-width: 768px) {
	.headerMainNavItem.headerMainNavItemXl {
		display: none;
	}

	.headerMainNavItem.headerMainNavItemMb {
		display: flex !important;
	}
}

.navItemHideMb {
}

.navItemShowOnlyMb {
	display: none;
}

@media screen and (max-width: 768px) {
	.navItemHideMb {
		display: none;
	}

	.navItemShowOnlyMb {
		display: block;
	}
}

.headerMainNavItemWrap {
	display: flex;
	align-items: center;
	position: relative;
}

.headerMainNavItemBadge {
	position: absolute;
	right: -6px;
	top: -3px;
	background: #f0c224;
	width: 16px;
	height: 16px;
	/*display: flex;*/
	align-content: center;
	justify-content: center;
	border-radius: 10px;
	font-size: 13px;
	font-weight: 700;
	color: #000;
	display: none;
}

.headerMainNavItemBadge.__Show {
	display: flex;
}

.headerMainNavLogo {
	max-width: 150px;
	min-height: 41px;
	display: flex;
	justify-content: center;
	align-items: center;
	width: 100%;
}

.headerMainNavLogo:focus,
.headerMainNavLogo:hover {
	opacity: 0.8;
}

@media screen and (max-width: 560px) {
	.headerMainNavLogo {
		display: none;
	}
}

/**/

.cartPage {
}

.cartPageBase {
	display: block;
}

.casePageMob {
	display: none;
	position: fixed;
	top: 0;
	right: 0;
	left: 0;
	bottom: 0;
	background: #fff;
}

.cartPageHeading {
	margin-top: 68px;
	margin-bottom: 50px;
}
.cartPageHeadingTitle h1 {
	font-family: 'Sofia Sans', sans-serif;
	font-weight: 500;
	font-size: 32px;
	color: #1f1f1f;
}
.cartPageHeadingTitle h1 sup {
	font-family: 'Manrope', sans-serif;
	font-weight: 500;
	font-size: 16px;
	line-height: 125%;
	letter-spacing: 0;
	color: #202020;
}

.cartPageBody {
	margin-bottom: 14vh;
}

.cartMobBottom {
	display: none;
	background: #fff;
}

.cartMobBottomWrapper {
	width: 100%;
}

.cartMobBottom .cartMobBottomBlock {
	padding: 10px;
}

.cartMobBottom .cartMobBottomBlock .cartMobBottomBlockAction {
}

.cartMobBottom
	.cartMobBottomBlock
	.cartMobBottomBlockAction
	.cartMobBottomBlockActionBtn {
	width: 100%;
	background: #f0c224;
	color: #252525;
	padding: 12px 24px;
	border-radius: 100px;
	text-decoration: none;
	display: block;
}

.cartMobBottom
	.cartMobBottomBlock
	.cartMobBottomBlockAction
	.cartMobBottomBlockActionBtn:hover,
.cartMobBottom
	.cartMobBottomBlock
	.cartMobBottomBlockAction
	.cartMobBottomBlockActionBtn:focus {
	background: #252525;
	color: #fff;
}

.cartMobBottom
	.cartMobBottomBlock
	.cartMobBottomBlockAction
	.cartMobBottomBlockActionBtn
	.blockActionBtnHeading {
}

.cartMobBottom
	.cartMobBottomBlock
	.cartMobBottomBlockAction
	.cartMobBottomBlockActionBtn
	.blockActionBtnHeading
	.blockActionBtnHeadingTitle {
	font-family: 'Montserrat', sans-serif;
	font-weight: 600;
	font-size: 14px;
	line-height: 125%;
	letter-spacing: 0%;
	text-align: center;
}

@media screen and (max-width: 768px) {
	.casePageMob {
		display: block;
	}

	.cartPageBase {
		display: none;
	}

	.cartMobBottom {
		display: block;
		position: fixed;
		bottom: 0px;
		z-index: 40;
		right: 0;
		left: 0;
	}

	.cartPageBody {
		margin-bottom: 5vh;
	}

	.cartPageHeading {
		margin-top: 30px;
		margin-bottom: 20px;
	}

	.cartPageHeadingTitle h1 {
		font-family: 'Sofia Sans', sans-serif;
		font-weight: 600;
		font-size: 24px;
		line-height: 125%;
		letter-spacing: 0%;
	}
}

.cartPageBodyWrapper {
	display: flex;
	align-items: flex-start;
	justify-content: space-between;
	gap: 60px;
}

.cartPageBodyList {
	flex: auto;
}

.cartPageBodyListItem {
	margin-bottom: 48px;
}

.payment-methods-grid {
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	gap: 20px;
}
/* ... */

